// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Map Balloon Animated 1`] = `
.c7 {
  font-family: Lato,sans-serif;
  font-size: 28px;
  -webkit-font-smoothing: antialiased;
  color: white;
  text-align: left;
  font-weight: 600;
}

.c8 {
  font-family: Lato,sans-serif;
  font-size: 18px;
  -webkit-font-smoothing: antialiased;
  color: #59636f;
  text-align: left;
  font-weight: 600;
}

.c4 {
  background-color: #ffffff;
  box-shadow: 0 1px 1px 0 rgba(0,0,0,0.16);
  border: solid 1px rgba(0,0,0,0.16);
  width: 100%;
  padding: 16px;
  box-sizing: border-box;
  border-radius: 4px;
  overflow: hidden;
}

.c1 {
  position: absolute;
  top: 400px;
  left: 400px;
  opacity: 1;
}

.c2 {
  font-size: 40px;
  position: absolute;
  bottom: 0;
  left: -20px;
  color: #f1c618;
  text-shadow: 0 2px 4px rgba(0,0,0,0.24);
}

.c3 {
  -webkit-animation: hyisGg 0.3s ease-in-out;
  animation: hyisGg 0.3s ease-in-out;
  position: absolute;
  bottom: 48px;
  left: -33px;
  -webkit-transform-origin: bottom left;
  -ms-transform-origin: bottom left;
  transform-origin: bottom left;
  height: 260px;
  width: 260px;
  padding: 0;
  border-radius: 8px;
  border: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c3 .caption {
  margin: 16px 8px;
}

.c5 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  background-image: url(https://picsum.photos/640/?random);
  background-size: cover;
  background-position: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.c6 {
  height: 147px;
  box-sizing: border-box;
  background: linear-gradient( 180deg, rgba(0,0,0,0) 0%, rgba(0,0,0,0.48) 100% );
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  padding: 24px;
}

.c0 {
  position: relative;
  width: 800px;
  height: 800px;
  background: #ccc url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAoAAAAKCAYAAACNMs+9AAAAFElEQVR4AWMgEthTT+GoQnsiMAMA+G4Eb/fCw1gAAAAASUVORK5CYII=);
}

<div
  className="c0"
>
  <div
    className="c1"
    opacity={1}
    x={400}
    y={400}
  >
    <div
      className="wg-location c2"
    />
    <div
      className="c3 c4"
    >
      <div
        className="c5"
      >
        <div
          className="c6"
        >
          <div
            className="c7"
            size={28}
            type="white"
          >
            Romaine Lettuce
          </div>
        </div>
      </div>
      <div
        className="caption c8"
        size={18}
        type="#59636f"
      >
        Paloma Orchards
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Map Balloon Custom opacity 1`] = `
.c7 {
  font-family: Lato,sans-serif;
  font-size: 28px;
  -webkit-font-smoothing: antialiased;
  color: white;
  text-align: left;
  font-weight: 600;
}

.c8 {
  font-family: Lato,sans-serif;
  font-size: 18px;
  -webkit-font-smoothing: antialiased;
  color: #59636f;
  text-align: left;
  font-weight: 600;
}

.c4 {
  background-color: #ffffff;
  box-shadow: 0 1px 1px 0 rgba(0,0,0,0.16);
  border: solid 1px rgba(0,0,0,0.16);
  width: 100%;
  padding: 16px;
  box-sizing: border-box;
  border-radius: 4px;
  overflow: hidden;
}

.c1 {
  position: absolute;
  top: 400px;
  left: 400px;
  opacity: 0.5;
}

.c2 {
  font-size: 40px;
  position: absolute;
  bottom: 0;
  left: -20px;
  color: #f1c618;
  text-shadow: 0 2px 4px rgba(0,0,0,0.24);
}

.c3 {
  position: absolute;
  bottom: 48px;
  left: -33px;
  -webkit-transform-origin: bottom left;
  -ms-transform-origin: bottom left;
  transform-origin: bottom left;
  height: 260px;
  width: 260px;
  padding: 0;
  border-radius: 8px;
  border: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c3 .caption {
  margin: 16px 8px;
}

.c5 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  background-image: url(https://picsum.photos/640/?random);
  background-size: cover;
  background-position: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.c6 {
  height: 147px;
  box-sizing: border-box;
  background: linear-gradient( 180deg, rgba(0,0,0,0) 0%, rgba(0,0,0,0.48) 100% );
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  padding: 24px;
}

.c0 {
  position: relative;
  width: 800px;
  height: 800px;
  background: #ccc url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAoAAAAKCAYAAACNMs+9AAAAFElEQVR4AWMgEthTT+GoQnsiMAMA+G4Eb/fCw1gAAAAASUVORK5CYII=);
}

<div
  className="c0"
>
  <div
    className="c1"
    opacity={0.5}
    x={400}
    y={400}
  >
    <div
      className="wg-location c2"
    />
    <div
      className="c3 c4"
    >
      <div
        className="c5"
      >
        <div
          className="c6"
        >
          <div
            className="c7"
            size={28}
            type="white"
          >
            Romaine Lettuce
          </div>
        </div>
      </div>
      <div
        className="caption c8"
        size={18}
        type="#59636f"
      >
        Paloma Orchards
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Map Balloon Custom pin 1`] = `
.c7 {
  font-family: Lato,sans-serif;
  font-size: 28px;
  -webkit-font-smoothing: antialiased;
  color: white;
  text-align: left;
  font-weight: 600;
}

.c8 {
  font-family: Lato,sans-serif;
  font-size: 18px;
  -webkit-font-smoothing: antialiased;
  color: #59636f;
  text-align: left;
  font-weight: 600;
}

.c4 {
  background-color: #ffffff;
  box-shadow: 0 1px 1px 0 rgba(0,0,0,0.16);
  border: solid 1px rgba(0,0,0,0.16);
  width: 100%;
  padding: 16px;
  box-sizing: border-box;
  border-radius: 4px;
  overflow: hidden;
}

.c1 {
  position: absolute;
  top: 400px;
  left: 400px;
  opacity: 1;
}

.c2 {
  font-size: 30px;
  position: absolute;
  bottom: 0;
  left: -15px;
  color: black;
  text-shadow: 0 2px 4px rgba(0,0,0,0.24);
}

.c3 {
  position: absolute;
  bottom: 38px;
  left: -33px;
  -webkit-transform-origin: bottom left;
  -ms-transform-origin: bottom left;
  transform-origin: bottom left;
  height: 260px;
  width: 260px;
  padding: 0;
  border-radius: 8px;
  border: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c3 .caption {
  margin: 16px 8px;
}

.c5 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  background-image: url(https://picsum.photos/640/?random);
  background-size: cover;
  background-position: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.c6 {
  height: 147px;
  box-sizing: border-box;
  background: linear-gradient( 180deg, rgba(0,0,0,0) 0%, rgba(0,0,0,0.48) 100% );
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  padding: 24px;
}

.c0 {
  position: relative;
  width: 800px;
  height: 800px;
  background: #ccc url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAoAAAAKCAYAAACNMs+9AAAAFElEQVR4AWMgEthTT+GoQnsiMAMA+G4Eb/fCw1gAAAAASUVORK5CYII=);
}

<div
  className="c0"
>
  <div
    className="c1"
    opacity={1}
    x={400}
    y={400}
  >
    <div
      className="wg-location c2"
    />
    <div
      className="c3 c4"
    >
      <div
        className="c5"
      >
        <div
          className="c6"
        >
          <div
            className="c7"
            size={28}
            type="white"
          >
            Romaine Lettuce
          </div>
        </div>
      </div>
      <div
        className="caption c8"
        size={18}
        type="#59636f"
      >
        Paloma Orchards
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Map Balloon Default 1`] = `
.c1 {
  position: absolute;
  top: 400px;
  left: 400px;
  opacity: 1;
}

.c2 {
  font-size: 40px;
  position: absolute;
  bottom: 0;
  left: -20px;
  color: #f1c618;
  text-shadow: 0 2px 4px rgba(0,0,0,0.24);
}

.c0 {
  position: relative;
  width: 800px;
  height: 800px;
  background: #ccc url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAoAAAAKCAYAAACNMs+9AAAAFElEQVR4AWMgEthTT+GoQnsiMAMA+G4Eb/fCw1gAAAAASUVORK5CYII=);
}

<div
  className="c0"
>
  <div
    className="c1"
    opacity={1}
    x={400}
    y={400}
  >
    <div
      className="wg-location c2"
    />
  </div>
</div>
`;

exports[`Storyshots Map Balloon Open Balloon 1`] = `
.c7 {
  font-family: Lato,sans-serif;
  font-size: 28px;
  -webkit-font-smoothing: antialiased;
  color: white;
  text-align: left;
  font-weight: 600;
}

.c8 {
  font-family: Lato,sans-serif;
  font-size: 18px;
  -webkit-font-smoothing: antialiased;
  color: #59636f;
  text-align: left;
  font-weight: 600;
}

.c4 {
  background-color: #ffffff;
  box-shadow: 0 1px 1px 0 rgba(0,0,0,0.16);
  border: solid 1px rgba(0,0,0,0.16);
  width: 100%;
  padding: 16px;
  box-sizing: border-box;
  border-radius: 4px;
  overflow: hidden;
}

.c1 {
  position: absolute;
  top: 400px;
  left: 400px;
  opacity: 1;
}

.c2 {
  font-size: 40px;
  position: absolute;
  bottom: 0;
  left: -20px;
  color: #f1c618;
  text-shadow: 0 2px 4px rgba(0,0,0,0.24);
}

.c3 {
  position: absolute;
  bottom: 48px;
  left: -33px;
  -webkit-transform-origin: bottom left;
  -ms-transform-origin: bottom left;
  transform-origin: bottom left;
  height: 260px;
  width: 260px;
  padding: 0;
  border-radius: 8px;
  border: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c3 .caption {
  margin: 16px 8px;
}

.c5 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  background-image: url(https://picsum.photos/640/?random);
  background-size: cover;
  background-position: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.c6 {
  height: 147px;
  box-sizing: border-box;
  background: linear-gradient( 180deg, rgba(0,0,0,0) 0%, rgba(0,0,0,0.48) 100% );
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  padding: 24px;
}

.c0 {
  position: relative;
  width: 800px;
  height: 800px;
  background: #ccc url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAoAAAAKCAYAAACNMs+9AAAAFElEQVR4AWMgEthTT+GoQnsiMAMA+G4Eb/fCw1gAAAAASUVORK5CYII=);
}

<div
  className="c0"
>
  <div
    className="c1"
    opacity={1}
    x={400}
    y={400}
  >
    <div
      className="wg-location c2"
    />
    <div
      className="c3 c4"
    >
      <div
        className="c5"
      >
        <div
          className="c6"
        >
          <div
            className="c7"
            size={28}
            type="white"
          >
            Romaine Lettuce
          </div>
        </div>
      </div>
      <div
        className="caption c8"
        size={18}
        type="#59636f"
      >
        Paloma Orchards
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Map Balloon Open Balloon at Right 1`] = `
.c7 {
  font-family: Lato,sans-serif;
  font-size: 28px;
  -webkit-font-smoothing: antialiased;
  color: white;
  text-align: left;
  font-weight: 600;
}

.c8 {
  font-family: Lato,sans-serif;
  font-size: 18px;
  -webkit-font-smoothing: antialiased;
  color: #59636f;
  text-align: left;
  font-weight: 600;
}

.c4 {
  background-color: #ffffff;
  box-shadow: 0 1px 1px 0 rgba(0,0,0,0.16);
  border: solid 1px rgba(0,0,0,0.16);
  width: 100%;
  padding: 16px;
  box-sizing: border-box;
  border-radius: 4px;
  overflow: hidden;
}

.c1 {
  position: absolute;
  top: 400px;
  left: 400px;
  opacity: 1;
}

.c2 {
  font-size: 40px;
  position: absolute;
  bottom: 0;
  left: -20px;
  color: #f1c618;
  text-shadow: 0 2px 4px rgba(0,0,0,0.24);
}

.c3 {
  position: absolute;
  bottom: 48px;
  -webkit-transform-origin: bottom right;
  -ms-transform-origin: bottom right;
  transform-origin: bottom right;
  right: -33px;
  height: 260px;
  width: 260px;
  padding: 0;
  border-radius: 8px;
  border: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c3 .caption {
  margin: 16px 8px;
}

.c5 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  background-image: url(https://picsum.photos/640/?random);
  background-size: cover;
  background-position: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.c6 {
  height: 147px;
  box-sizing: border-box;
  background: linear-gradient( 180deg, rgba(0,0,0,0) 0%, rgba(0,0,0,0.48) 100% );
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  padding: 24px;
}

.c0 {
  position: relative;
  width: 800px;
  height: 800px;
  background: #ccc url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAoAAAAKCAYAAACNMs+9AAAAFElEQVR4AWMgEthTT+GoQnsiMAMA+G4Eb/fCw1gAAAAASUVORK5CYII=);
}

<div
  className="c0"
>
  <div
    className="c1"
    opacity={1}
    x={400}
    y={400}
  >
    <div
      className="wg-location c2"
    />
    <div
      className="c3 c4"
    >
      <div
        className="c5"
      >
        <div
          className="c6"
        >
          <div
            className="c7"
            size={28}
            type="white"
          >
            Romaine Lettuce
          </div>
        </div>
      </div>
      <div
        className="caption c8"
        size={18}
        type="#59636f"
      >
        Paloma Orchards
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Map Balloon Single Image 1`] = `
.c4 {
  background-origin: border-box;
  background-repeat: no-repeat;
  box-sizing: border-box;
  min-width: 184px;
  min-height: 184px;
  width: 184px;
  height: 184px;
  overflow: hidden;
  border: solid 2px rgba(0,0,0,0.16);
  border-radius: 4px;
  background-image: url(https://picsum.photos/180/?random);
  background-size: cover;
  background-position: center;
}

.c1 {
  position: absolute;
  top: 400px;
  left: 400px;
  opacity: 1;
}

.c2 {
  font-size: 40px;
  position: absolute;
  bottom: 0;
  left: -20px;
  color: #f1c618;
  text-shadow: 0 2px 4px rgba(0,0,0,0.24);
}

.c3 {
  background-color: white;
  position: absolute;
  bottom: 48px;
  left: -92px;
  border-radius: 8px;
}

.c0 {
  position: relative;
  width: 800px;
  height: 800px;
  background: #ccc url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAoAAAAKCAYAAACNMs+9AAAAFElEQVR4AWMgEthTT+GoQnsiMAMA+G4Eb/fCw1gAAAAASUVORK5CYII=);
}

<div
  className="c0"
>
  <div
    className="c1"
    opacity={1}
    x={400}
    y={400}
  >
    <div
      className="wg-location c2"
    />
    <div
      className="c3 c4"
      size={184}
      src="https://picsum.photos/180/?random"
    />
  </div>
</div>
`;

exports[`Storyshots Map Balloon custom border radius 1`] = `
.c4 {
  background-origin: border-box;
  background-repeat: no-repeat;
  box-sizing: border-box;
  min-width: 184px;
  min-height: 184px;
  width: 184px;
  height: 184px;
  overflow: hidden;
  border: solid 2px rgba(0,0,0,0.16);
  border-radius: 4px;
  background-image: url(https://picsum.photos/180/?random);
  background-size: cover;
  background-position: center;
}

.c1 {
  position: absolute;
  top: 400px;
  left: 400px;
  opacity: 1;
}

.c2 {
  font-size: 40px;
  position: absolute;
  bottom: 0;
  left: -20px;
  color: #f1c618;
  text-shadow: 0 2px 4px rgba(0,0,0,0.24);
}

.c3 {
  background-color: white;
  position: absolute;
  bottom: 48px;
  left: -92px;
  border-radius: 50%;
}

.c0 {
  position: relative;
  width: 800px;
  height: 800px;
  background: #ccc url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAoAAAAKCAYAAACNMs+9AAAAFElEQVR4AWMgEthTT+GoQnsiMAMA+G4Eb/fCw1gAAAAASUVORK5CYII=);
}

<div
  className="c0"
>
  <div
    className="c1"
    opacity={1}
    x={400}
    y={400}
  >
    <div
      className="wg-location c2"
    />
    <div
      className="c3 c4"
      size={184}
      src="https://picsum.photos/180/?random"
    />
  </div>
</div>
`;

exports[`Storyshots Map Balloon custom sizes 1`] = `
.c7 {
  font-family: Lato,sans-serif;
  font-size: 30px;
  -webkit-font-smoothing: antialiased;
  color: white;
  text-align: left;
  font-weight: 600;
}

.c8 {
  font-family: Lato,sans-serif;
  font-size: 30px;
  -webkit-font-smoothing: antialiased;
  color: #59636f;
  text-align: left;
  font-weight: 600;
}

.c4 {
  background-color: #ffffff;
  box-shadow: 0 1px 1px 0 rgba(0,0,0,0.16);
  border: solid 1px rgba(0,0,0,0.16);
  width: 100%;
  padding: 16px;
  box-sizing: border-box;
  border-radius: 4px;
  overflow: hidden;
}

.c1 {
  position: absolute;
  top: 400px;
  left: 400px;
  opacity: 1;
}

.c2 {
  font-size: 40px;
  position: absolute;
  bottom: 0;
  left: -20px;
  color: #f1c618;
  text-shadow: 0 2px 4px rgba(0,0,0,0.24);
}

.c3 {
  position: absolute;
  bottom: 48px;
  left: -33px;
  -webkit-transform-origin: bottom left;
  -ms-transform-origin: bottom left;
  transform-origin: bottom left;
  height: 350px;
  width: 350px;
  padding: 0;
  border-radius: 8px;
  border: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c3 .caption {
  margin: 16px 8px;
}

.c5 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  background-image: url(https://picsum.photos/640/?random);
  background-size: cover;
  background-position: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.c6 {
  height: 147px;
  box-sizing: border-box;
  background: linear-gradient( 180deg, rgba(0,0,0,0) 0%, rgba(0,0,0,0.48) 100% );
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  padding: 24px;
}

.c0 {
  position: relative;
  width: 800px;
  height: 800px;
  background: #ccc url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAoAAAAKCAYAAACNMs+9AAAAFElEQVR4AWMgEthTT+GoQnsiMAMA+G4Eb/fCw1gAAAAASUVORK5CYII=);
}

<div
  className="c0"
>
  <div
    className="c1"
    opacity={1}
    x={400}
    y={400}
  >
    <div
      className="wg-location c2"
    />
    <div
      className="c3 c4"
    >
      <div
        className="c5"
      >
        <div
          className="c6"
        >
          <div
            className="c7"
            size={30}
            type="white"
          >
            Romaine Lettuce
          </div>
        </div>
      </div>
      <div
        className="caption c8"
        size={30}
        type="#59636f"
      >
        Paloma Orchards
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Map Balloon imageSet without name 1`] = `
.c6 {
  font-family: Lato,sans-serif;
  font-size: 18px;
  -webkit-font-smoothing: antialiased;
  color: #59636f;
  text-align: left;
  font-weight: 600;
}

.c4 {
  background-color: #ffffff;
  box-shadow: 0 1px 1px 0 rgba(0,0,0,0.16);
  border: solid 1px rgba(0,0,0,0.16);
  width: 100%;
  padding: 16px;
  box-sizing: border-box;
  border-radius: 4px;
  overflow: hidden;
}

.c1 {
  position: absolute;
  top: 400px;
  left: 400px;
  opacity: 1;
}

.c2 {
  font-size: 40px;
  position: absolute;
  bottom: 0;
  left: -20px;
  color: #f1c618;
  text-shadow: 0 2px 4px rgba(0,0,0,0.24);
}

.c3 {
  position: absolute;
  bottom: 48px;
  left: -33px;
  -webkit-transform-origin: bottom left;
  -ms-transform-origin: bottom left;
  transform-origin: bottom left;
  height: 260px;
  width: 260px;
  padding: 0;
  border-radius: 8px;
  border: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c3 .caption {
  margin: 16px 8px;
}

.c5 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  background-image: url(https://picsum.photos/640/?random);
  background-size: cover;
  background-position: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.c0 {
  position: relative;
  width: 800px;
  height: 800px;
  background: #ccc url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAoAAAAKCAYAAACNMs+9AAAAFElEQVR4AWMgEthTT+GoQnsiMAMA+G4Eb/fCw1gAAAAASUVORK5CYII=);
}

<div
  className="c0"
>
  <div
    className="c1"
    opacity={1}
    x={400}
    y={400}
  >
    <div
      className="wg-location c2"
    />
    <div
      className="c3 c4"
    >
      <div
        className="c5"
      />
      <div
        className="caption c6"
        size={18}
        type="#59636f"
      >
        Paloma Orchards
      </div>
    </div>
  </div>
</div>
`;
